--- a/views/User.html
+++ b/views/User.html
@@ -41,21 +41,21 @@
                     <ul class="nav nav-pills flex-column mb-auto">
 
                         <li class="nav-item mt-1">
-                            <a id="inicioLink" class="nav-dark btn btn-light d-flex align-items-center"
+                            <a id="Inicio" class="nav-dark btn btn-light d-flex align-items-center"
                                 aria-current="page">
                                 <i class="bi bi-house me-2"></i> Inicio
                             </a>
                         </li>
 
                         <li class="nav-item mt-1">
-                            <a href="#" id="SolicitudDePartidas"
+                            <a href="" id="Mascotas"
                                 class="nav-dark btn btn-light d-flex align-items-center" aria-current="page">
-                                <i class="bi bi-send-arrow-down me-2"></i> Solicitud de partida
+                                <i class="bi bi-send-arrow-down me-2"></i> Mascotas
                             </a>
                         </li>
                         <li class="nav-item mt-1">
-                            <a id="SolicitudDeMisas" href="#" class="nav-dark btn btn-light d-flex align-items-center">
-                                <i class="bi bi-calendar-month me-2"></i> Solicitud de misa
+                            <a id="SolicitudDeCita" href="#" class="nav-dark btn btn-light d-flex align-items-center">
+                                <i class="bi bi-calendar-month me-2"></i> Solicitud Cita
                             </a>
                         </li>
 
@@ -123,14 +123,14 @@
                         <ul class="navbar-nav">
 
                             <li class="nav-item">
-                                <a id="MobileinicioLink" class="nav-dark btn btn-light d-flex align-items-center"
+                                <a id="MobileInicio" class="nav-dark btn btn-light d-flex align-items-center"
                                     aria-current="page">
                                     <i class="bi bi-house me-2"></i> Inicio
                                 </a>
                             </li>
 
                             <li class="nav-item">
-                                <a href="#" id="MobileAdminLink"
+                                <a href="#" id="MobileMascotas"
                                     class="nav-dark btn btn-light d-flex align-items-center" aria-current="page">
                                     <i class="bi bi-send-arrow-down me-2"></i> Mascotas
                                 </a>
@@ -198,102 +198,10 @@
             <main id="Principal" class="col-md-9 col-lg-10 col-sm-12 d-flex flex-column align-items-center "
                 style="height: 100vh; overflow-y: auto;">
 
-                <div class="container w-76 mt-5">
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#createPetModal">
-                        Crear Mascota
-                    </button>
+                <div class="container px-5 my-5 text-center" >
+                    <img src="/img/fondo.jpg" class="img-fluid" alt="">
                 </div>
 
-                <div class="modal fade" id="createPetModal" tabindex="-1" aria-labelledby="createPetModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="createPetModalLabel">Crear Nueva Mascota</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                                    <span class="visually-hidden">Cerrar</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <form id="createPetForm">
-                                    <div class="mb-3">
-                                        <label for="petName" class="form-label">Nombre*</label>
-                                        <input type="text" class="form-control" id="petName" required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="petPhoto" class="form-label">Foto URL</label>
-                                        <input type="url" class="form-control" id="petPhoto">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="petSpecies" class="form-label">Especie*</label>
-                                        <input type="text" class="form-control" id="petSpecies" required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="petBreed" class="form-label">Raza</label>
-                                        <input type="text" class="form-control" id="petBreed">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="petBirthdate" class="form-label">Fecha de nacimiento</label>
-                                        <input type="date" class="form-control" id="petBirthdate">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="petGender" class="form-label">Género</label>
-                                        <select class="form-select" id="petGender">
-                                            <option value="">Seleccionar</option>
-                                            <option value="Macho">Macho</option>
-                                            <option value="Hembra">Hembra</option>
-                                        </select>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="petWeight" class="form-label">Peso (kg)</label>
-                                        <input type="number" class="form-control" id="petWeight" step="0.1">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="petColor" class="form-label">Color</label>
-                                        <input type="text" class="form-control" id="petColor">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="petAllergies" class="form-label">Alergias</label>
-                                        <textarea class="form-control" id="petAllergies"></textarea>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="petDietaryRestrictions" class="form-label">Restricciones
-                                            dietéticas</label>
-                                        <textarea class="form-control" id="petDietaryRestrictions"></textarea>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                                <button type="button" class="btn btn-primary" onclick="createPet()">Guardar</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="container  px-5 my-2 " style="background-color: aqua; width:85% ">
-                    <div class="row row-cols-1 row-cols-md-3 g-4" id="petCardsContainer">
-                        <!-- Las tarjetas de mascotas se insertarán aquí dinámicamente -->
-                    </div>
-                </div>
-
-                <!-- Template para la tarjeta de mascota -->
-                <template id="petCardTemplate">
-                    <div class="col">
-                        <div class="card h-100">
-                            <img src="" class="card-img-top pet-photo" alt="Foto de la mascota">
-                            <div class="card-body">
-                                <h5 class="card-title pet-name"></h5>
-                                <p class="card-text pet-species"></p>
-                                <p class="card-text pet-breed"></p>
-                            </div>
-                            <div class="card-footer">
-                                <button class="btn btn-primary btn-sm me-2 edit-pet">Vacunas</button>
-                                <button class="btn btn-danger btn-sm delete-pet">Historial</button>
-                            </div>
-                        </div>
-                    </div>
-                </template>
 
 
             </main>
@@ -314,8 +222,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="editProfile.js"></script>
-    <script src="pet.js"></script>
-    <script src="cardPets.js"></script>
+    
+   
+    <script src="Mascotas.js"> </script>
+    <script src="datePetUser.js"></script>
 
 
 </body>
