--- a/views/Admin.html
+++ b/views/Admin.html
@@ -136,7 +136,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" id="MobileMisa" class="nav-dark btn btn-light d-flex align-items-center"
+                                <a href="#" id="MobileBuscar" class="nav-dark btn btn-light d-flex align-items-center"
                                     aria-current="page">
                                     <i class="bi bi-search me-2"></i> Buscar
                                 </a>
