arreglo de configuracion

--- a/views/User.html
+++ b/views/User.html
@@ -97,6 +97,10 @@
                                     <label for="editEmail" class="form-label">Correo electrónico</label>
                                     <input type="email" class="form-control" id="editEmail" required>
                                 </div>
+                                <div class="mb-3">
+                                    <label for="editPhone" class="form-label">Celular</label>
+                                    <input type="number" class="form-control" id="editPhone" required>
+                                </div>
                                 <!-- Agrega más campos según sea necesario -->
                                 <div class="d-grid">
                                     <button type="submit" class="btn btn-primary">Guardar cambios</button>
@@ -161,36 +165,7 @@
                 </div>
             </nav>
 
-            <!-- Modal para editar perfil -->
-            <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="editProfileModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="editProfileModalLabel">Editar Perfil</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form id="editProfileForm">
-                                <div class="mb-3">
-                                    <label for="editName" class="form-label">Nombre</label>
-                                    <input type="text" class="form-control" id="editName" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="editEmail" class="form-label">Correo electrónico</label>
-                                    <input type="email" class="form-control" id="editEmail" required>
-                                </div>
-                                <!-- Agrega más campos según sea necesario -->
-                                <div class="d-grid">
-                                    <button type="submit" class="btn btn-primary">Guardar cambios</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
+           
 
 
 
