--- a/views/Admin.html
+++ b/views/Admin.html
@@ -97,6 +97,10 @@
                                     <label for="editEmail" class="form-label">Correo electrónico</label>
                                     <input type="email" class="form-control" id="editEmail" required>
                                 </div>
+                                <div class="mb-3">
+                                    <label for="editPhone" class="form-label">Celular</label>
+                                    <input type="number" class="form-control" id="editPhone" required>
+                                </div>
                                 <!-- Agrega más campos según sea necesario -->
                                 <div class="d-grid">
                                     <button type="submit" class="btn btn-primary">Guardar cambios</button>
