--- a/views/Admin.html
+++ b/views/Admin.html
@@ -54,8 +54,8 @@
                             </a>
                         </li>
                         <li class="nav-item mt-1">
-                            <a id="SearchForDocUser" href="#" class="nav-dark btn btn-light d-flex align-items-center">
-                                <i class="bi bi-search me-2"></i> Buscar
+                            <a id="Procesos" href="#" class="nav-dark btn btn-light d-flex align-items-center">
+                                <i class="bi bi-search me-2"></i> Procesos
                             </a>
                         </li>
 
@@ -187,6 +187,7 @@
     <script src="editProfile.js"></script>
     <script src="calenderAdmin.js"></script>
     <script src="SearchPetIdUser.js"></script>
+    <script src="Admin_History.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
