--- a/views/Admin.html
+++ b/views/Admin.html
@@ -54,8 +54,13 @@
                             </a>
                         </li>
                         <li class="nav-item mt-1">
+                            <a id="SearchForDocUser" href="#" class="nav-dark btn btn-light d-flex align-items-center">
+                                <i class="bi bi-search me-2"></i> Buscar
+                            </a>
+                        </li>
+                        <li class="nav-item mt-1">
                             <a id="Procesos" href="#" class="nav-dark btn btn-light d-flex align-items-center">
-                                <i class="bi bi-search me-2"></i> Procesos
+                                <i class="bi bi-card-list me-2"></i> Procesos
                             </a>
                         </li>
 
@@ -145,6 +150,12 @@
                                     <i class="bi bi-search me-2"></i> Buscar
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a href="#" id="MobileProcesos" class="nav-dark btn btn-light d-flex align-items-center"
+                                    aria-current="page">
+                                    <i class="bi bi-card-list me-2"></i> Procesos
+                                </a>
+                            </li>
 
 
                             <li class="nav-item">
@@ -155,7 +166,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a href="/" id="MobileGestionPartidas"
+                                <a href="/" id=""
                                     class="nav-dark btn btn-light d-flex align-items-center" aria-current="page">
                                     <i class="bi bi-arrow-right-square me-2"></i> Cerrar sesión
                                 </a>
