terminado mostrando vacunas

--- a/views/User.html
+++ b/views/User.html
@@ -140,9 +140,9 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" id="MobileMisa" class="nav-dark btn btn-light d-flex align-items-center"
+                                <a href="#" id="MobileCita" class="nav-dark btn btn-light d-flex align-items-center"
                                     aria-current="page">
-                                    <i class="bi bi-calendar-month me-2"></i> Solicitud de misa
+                                    <i class="bi bi-calendar-month me-2"></i> Solicitud de cita
                                 </a>
                             </li>
 
