--- a/views/User.html
+++ b/views/User.html
@@ -73,7 +73,7 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="/">Cerrar Sesión</a></li>
+                            <li><a type="button" class="dropdown-item"  id="logoutBtn">Cerrar Sesión</a></li>
                         </ul>
                     </div>
                 </div>
@@ -185,6 +185,35 @@
 
 
 
+    <script>
+        const API_URL = 'https://veterinaria-5tmd.onrender.com';
+        document.addEventListener('DOMContentLoaded', () => {
+            const token = localStorage.getItem('token');
+            const userRole = localStorage.getItem('userRole');
+            if (!token || userRole !== 'Usuario') {
+                window.location.href = '/';
+                return;
+            }
+            fetch(`${API_URL}/api/user`, {
+                headers: {
+                    'Authorization': `Bearer ${token}`
+                }
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('No autorizado');
+                }
+                return response.json();
+            })
+    
+            document.getElementById('logoutBtn').addEventListener('click', () => {
+                localStorage.removeItem('token');
+                localStorage.removeItem('userRole');
+                window.location.href = '/';
+            });
+        });
+    </script>
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
