--- a/public/css/styleUser.css
+++ b/public/css/styleUser.css
@@ -29,3 +29,9 @@ body{
 .custom-main{
     overflow-y: hidden;
 }
+
+.pet-photo {
+    width: 100%;
+    height: 200px; /* Puedes ajustar este valor según tus preferencias */
+    object-fit: cover;
+}
